--- a/Home.css
+++ b/Home.css
@@ -1,243 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mukta+Vaani&family=Poppins:wght@300;400;500;600&family=Raleway:wght@100&display=swap');
+
 :root {
     color-scheme: light dark;
 }
-.container{
+
+.container {
     display: flex;
     gap: 5px;
 }
+
 .preloader {
     display: flex;
     align-items: center;
     margin-left: 5px;
     margin-right: 5px;
-    
-}
-.main {
-    flex: 0.5;
-    flex-direction: column;
-    display: flex;
-    box-sizing: border-box;
-}
-h1 {
-    font-family: 'Poppins', sans-serif;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    display: flex;
-    color: #BC0E0E;
-}
-img {
-    width: 65px;
-    height: 65px;
-    margin-left: 0px;
-}
-.Home {
-    background-color: #262626;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    border-radius: 20px;
-    justify-content: center;
-}
-li {
-    list-style-type: none;
-    padding: 10px;
-    font-size: 20px; 
-    font-weight: 500;    
-    font-family: 'Poppins', sans-serif;
-}
-.Home li a{
-    color:white
-}
-.Home li a:hover{
-    color: #BC0E0E;
-    background-color: #ffffff; 
-    border-radius: 25px;
-    padding: 5px;
 
 }
-.Home-img {
-    width: 100%;
-    height: 100%;
+
+.navbar {
+    position: sticky;
+}
+nav ul {
     display: flex;
     align-items: center;
-    border-radius: 25px;
-    justify-content: center;
+    height: 60px;
+    background-color: rgb(31, 31, 31);
+    list-style: none;
+    color: white;
 }
-.Home-img img {
-    width: 25px;
-    height: 25px;
-    align-items: left;
+
+nav ul a {
+    text-decoration: none;
+    color: white;
 }
-.Search-img{
-    width: 100%;
-    height: 100%;
+
+.brand {
     display: flex;
     align-items: center;
-    border-radius: 25px;
-    justify-content: center;
-}
-.Search-img img {
-    width: 25px;
-    height: 25px;
-    align-content: left;
-}
-.library {
-    background-color: #262626;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-    border-radius: 20px;
-    justify-content: center;
-}
-.library-img {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    border-radius: 100%;
-    justify-content: center;
-    margin-top: 10px;
-}
-.library-img img {
-    width: auto;
-    height: 35px;
-    border-radius: 70%;
-    align-content: left;
-}   
-.library-img li a {
-    font-family: 'Mukta+Vaani', sans-serif;
-    font-size: 35px;
-    color: #ffffff;
-    font-weight: 100;
-    align-items: right;
-    margin-left: 10px;
-}
-.library-img li a:hover {
-    color: #BC0E0E;
-}
-.Artist li{
-    color:white;
-    cursor: pointer;
-    border-radius: 25px;
-    background-color: #444343; 
-    width: 40px;
-    margin-left: 10px;
-    padding: 5px;
-    justify-content: center;
-    font-size: small
-}
-.Artist li:hover{
-    color: #BC0E0E;
-}
-.Album{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    justify-content: left;
-    display:none;
-}
-.Album1{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    margin-left: 5px;
-    justify-content: left;
+    font-weight: bold;
+    font-size: 1.4rem;
     cursor: pointer;
 }
-.Album1:hover{
-    background-color: #2F2929;
-    border-radius: 20px;
+
+.brand img {
+    width: 65px;
+    height: 65px;
 }
-.Album1 img{
-    border-radius: 50px;
-    width: 45px;
-    height: 45px;
-}
-.Album1 h3{
-    color:white;
+
+nav ul li h1 {
     font-family: 'Poppins', sans-serif;
-    border-radius: 25px;
-    padding: 5px;
-    font-size: 15px
+    font-size: 1.8rem;
+    font-weight: 700;
 }
-.Album2{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    margin-left: 5px;
-    justify-content: left;
-    cursor: pointer;
+
+nav ul li {
+    margin-left: 20px;
+    font-weight: 500;
 }
-.Album2:hover{
-    background-color: #2F2929;
-    border-radius: 20px;
-}
-.Album2 img{
-    border-radius: 50px;
-    width: 45px;
-    height: 45px;
-}
-.Album2 h3{
-    color:white;
+
+nav ul li a {
+    color: white;
+    display: block;
     font-family: 'Poppins', sans-serif;
-    border-radius: 25px;
-    padding: 5px;
-    font-size: 15px
+    font-size: 1.1rem;
+    margin: 10px;
+    padding: 3px 12px;
+    text-decoration: none;
 }
-.Album3{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    margin-left: 5px;
-    justify-content: left;
-    cursor: pointer;
-}
-.Album3:hover{
-    background-color: #2F2929;
-    border-radius: 20px;
-}
-.Album3 img{
-    border-radius: 50px;
-    width: 45px;
-    height: 45px;
-}
-.Album3 h3{
-    color:white;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 25px;
-    padding: 5px;
-    font-size: 15px
-}
-.Album4{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    margin-left: 5px;
-    justify-content: left;
-    cursor: pointer;
-}
-.Album4:hover{
-    background-color: #2F2929;
-    border-radius: 20px;
-}
-.Album4 img{
-    border-radius: 50px;
-    width: 45px;
-    height: 45px;
-}
-.Album4 h3{
-    color:white;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 25px;
-    padding: 5px;
-    font-size: 15px
-}
-.body{
+.body {
     margin-top: 0px;
     flex-direction: column;
     width: 90%;
@@ -246,13 +77,20 @@ li {
     flex: 2;
     border-radius: 20px;
 }
-#greeting{
+
+#greeting {
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     color: #BC0E0E;
     font-weight: 700;
 }
-.songlist1{
+.Allalbum{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.songlist1 {
     display: flex;
     align-items: flex-start;
     gap: 15px;
@@ -261,6 +99,7 @@ li {
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .song-img1 {
     width: fit-content;
     height: fit-content;
@@ -275,9 +114,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img1:hover{
+
+.song-img1:hover {
     border-color: #ffffff;
 }
+
 .song-img1 img {
     width: fit-content;
     height: fit-content;
@@ -285,13 +126,15 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img1 h3{
+
+.song-img1 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
     font-weight: 700;
     position: relative;
 }
+
 .song-img2 {
     width: fit-content;
     height: fit-content;
@@ -306,9 +149,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img2:hover{
+
+.song-img2:hover {
     border-color: #ffffff;
 }
+
 .song-img2 img {
     width: fit-content;
     height: fit-content;
@@ -316,13 +161,15 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img2 h3{
+
+.song-img2 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
     font-weight: 700;
     position: relative;
 }
+
 .song-img3 {
     width: fit-content;
     height: fit-content;
@@ -337,9 +184,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img3:hover{
+
+.song-img3:hover {
     border-color: #ffffff;
 }
+
 .song-img3 img {
     width: fit-content;
     height: fit-content;
@@ -347,13 +196,15 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img3 h3{
+
+.song-img3 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
     font-weight: 700;
     position: relative;
 }
+
 .song-img4 {
     width: fit-content;
     height: fit-content;
@@ -368,9 +219,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img4:hover{
+
+.song-img4:hover {
     border-color: #ffffff;
 }
+
 .song-img4 img {
     width: fit-content;
     height: fit-content;
@@ -378,14 +231,16 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img4 h3{
+
+.song-img4 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
     font-weight: 700;
     position: relative;
 }
-.songlist2{
+
+.songlist2 {
     display: flex;
     align-items: flex-start;
     gap: 15px;
@@ -394,6 +249,7 @@ li {
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .song-img5 {
     width: fit-content;
     height: fit-content;
@@ -408,9 +264,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img5:hover{
+
+.song-img5:hover {
     border-color: #ffffff;
 }
+
 .song-img5 img {
     width: fit-content;
     height: fit-content;
@@ -418,13 +276,15 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img5 h3{
+
+.song-img5 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
     font-weight: 700;
     position: relative;
 }
+
 .song-img6 {
     width: fit-content;
     height: fit-content;
@@ -439,9 +299,11 @@ li {
     transition: 0.2s ease-in;
     cursor: pointer;
 }
-.song-img6:hover{
+
+.song-img6:hover {
     border-color: #ffffff;
 }
+
 .song-img6 img {
     width: fit-content;
     height: fit-content;
@@ -449,7 +311,8 @@ li {
     border-radius: 20px;
     position: relative;
 }
-.song-img6 h3{
+
+.song-img6 h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
@@ -541,12 +404,12 @@ li {
 }
 
 /* Home Page */
-.home_body {
+.Home-body {
     background-color: rgba(56, 56, 56, 0.76);
     margin: auto;
     margin-top: 20px;
     flex: 1;
-    width: 60vw;
+    width: 70vw;
     padding: 25px;
     color: white;
     display: flex;
@@ -597,7 +460,8 @@ li {
     width: 75%;
     border-bottom: 2px solid white;
 }
-.social-icon{
+
+.social-icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -605,12 +469,14 @@ li {
     margin: auto;
     margin-top: 20px;
 }
-.social-icon img{
+
+.social-icon img {
     border-radius: 5px;
     width: 40px;
     height: 40px;
 }
-.inline-list{
+
+.inline-list {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -618,7 +484,8 @@ li {
     margin: auto;
     margin-top: 20px;
 }
-.inline-list a{
+
+.inline-list a {
     color: white;
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
