--- a/Home.css
+++ b/Home.css
@@ -17,56 +17,51 @@
     margin-right: 5px;
 
 }
-
-.navbar {
-    position: sticky;
+nav img{
+    width: 65px;
+    height: 65PX;
 }
 nav ul {
     display: flex;
     align-items: center;
     height: 60px;
-    background-color: rgb(31, 31, 31);
     list-style: none;
     color: white;
 }
-
-nav ul a {
-    text-decoration: none;
-    color: white;
-}
-
-.brand {
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    font-size: 1.4rem;
-    cursor: pointer;
-}
-
-.brand img {
-    width: 65px;
-    height: 65px;
-}
-
-nav ul li h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.8rem;
-    font-weight: 700;
-}
-
 nav ul li {
-    margin-left: 20px;
     font-weight: 500;
 }
-
-nav ul li a {
-    color: white;
-    display: block;
+nav a {
+    position: relative;
+    font-size: 1.1em;
     font-family: 'Poppins', sans-serif;
-    font-size: 1.1rem;
-    margin: 10px;
-    padding: 3px 12px;
+    color: #333;
     text-decoration: none;
+    padding: 6px 20px;
+    transition: .5s;
+}
+
+nav a:hover {
+    color: #BC0E0E;
+}
+
+nav a span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-bottom: 2px solid #BC0E0E;
+    border-radius: 15px;
+    transform: scale(0) translateY(50px);
+    opacity: 0;
+    transition: .5s;
+}
+
+nav a:hover span {
+    transform: scale(1) translateY(0);
+    opacity: 1;
 }
 .body {
     margin-top: 0px;
