--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body .options .option {
 }
 
 body .options .option:nth-child(1) {
-    --defaultBackground:url(Music_website/AVPL.png);
+    --defaultBackground:url(Music_website/Dabang.jpg);
 }
 
 body .options .option:nth-child(2) {
