--- a/Home.css
+++ b/Home.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mukta+Vaani&family=Poppins:wght@300;400;500;600&family=Raleway:wght@100&display=swap');
 
-:root {
-    color-scheme: light dark;
-}
-
 .container {
     display: flex;
     gap: 5px;
@@ -16,6 +12,9 @@
     margin-left: 5px;
     margin-right: 5px;
 
+}
+body{
+    background:url(Music_website/bg.jpg);
 }
 nav img{
     width: 65px;
@@ -68,7 +67,6 @@ nav a:hover span {
     flex-direction: column;
     width: 90%;
     padding: 10px;
-    background-color: #262626;
     flex: 2;
     border-radius: 20px;
 }
