--- a/style.css
+++ b/style.css
@@ -1,194 +1,141 @@
 body {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    height: 100vh;
-    font-family: "Roboto", sans-serif;
+    margin: 0;
+    font-family: 'Muli', sans-serif;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
-body .options {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    overflow: hidden;
-    min-width: 600px;
-    max-width: 900px;
-    width: calc(100% - 100px);
-    height: 400px;
+.background {
+    background: url('https://images.pexels.com/photos/1095624/pexels-photo-1095624.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260') center top no-repeat #252746;
+    background-size: cover;
+    display: block;
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
 }
 
-@media screen and (max-width: 718px) {
-    body .options {
-        min-width: 520px;
-    }
-
-    body .options .option:nth-child(5) {
-        display: none;
-    }
+.background-texture {
+    background: -webkit-gradient(linear,
+            left bottom,
+            left top,
+            from(#0f0140e6),
+            to(rgba(255, 214, 117, 0.9)));
+    background: linear-gradient(to top, #0f0140e6, rgba(255, 214, 117, 0.9));
+    background-size: cover;
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
 }
 
-@media screen and (max-width: 638px) {
-    body .options {
-        min-width: 440px;
-    }
-
-    body .options .option:nth-child(4) {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 558px) {
-    body .options {
-        min-width: 360px;
-    }
-
-    body .options .option:nth-child(3) {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 478px) {
-    body .options {
-        min-width: 280px;
-    }
-
-    body .options .option:nth-child(2) {
-        display: none;
-    }
-}
-
-body .options .option {
+.carousel {
+    width: 100%;
+    overflow-x: scroll;
+    padding: 30px;
+    padding-top: 80px;
     position: relative;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.carousel__container {
+    white-space: nowrap;
+    margin: 70px 0px;
+    padding-bottom: 10px;
+    display: inline-block;
+}
+
+.categories__title {
+    color: rgb(77, 55, 102);
+    font-size: 28px;
+    position: absolute;
+    padding-left: 30px;
+}
+
+.carousel-item {
+    width: 200px;
+    height: 250px;
+    border-radius: 20px;
+    background-color: #95bcd6;
     overflow: hidden;
-    min-width: 60px;
-    margin: 10px;
-    background: var(--optionBackground, var(--defaultBackground, #E6E9ED));
-    background-size: auto 120%;
-    background-position: center;
+    margin-right: 10px;
+    margin-top: 70px;
+    display: inline-block;
     cursor: pointer;
-    transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
+    -webkit-transition: 1000ms all;
+    transition: 1000ms all;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+    position: relative;
 }
 
-body .options .option:nth-child(1) {
-    --defaultBackground:url(Music_website/Dabang.jpg);
+.carousel-item:hover~.carousel-item {
+    -webkit-transform: translate3d(100px, 0, 0);
+    transform: translate3d(100px, 0, 0);
 }
 
-body .options .option:nth-child(2) {
-    --defaultBackground: #FC6E51;
+.carousel__container:hover .carousel-item {
+    opacity: 0.3;
 }
 
-body .options .option:nth-child(3) {
-    --defaultBackground: #FFCE54;
-}
-
-body .options .option:nth-child(4) {
-    --defaultBackground: #2ECC71;
-}
-
-body .options .option:nth-child(5) {
-    --defaultBackground: #5D9CEC;
-}
-
-body .options .option:nth-child(6) {
-    --defaultBackground: #AC92EC;
-}
-
-body .options .option.active {
-    flex-grow: 10000;
-    transform: scale(1);
-    max-width: 600px;
-    margin: 0px;
-    border-radius: 40px;
-    background-size: auto 100%;
-    /*&:active {
-transform:scale(0.9);
-}*/
-}
-
-body .options .option.active .shadow {
-    box-shadow: inset 0 -120px 120px -120px black, inset 0 -120px 120px -100px black;
-}
-
-body .options .option.active .label {
-    bottom: 20px;
-    left: 20px;
-}
-
-body .options .option.active .label .info>div {
-    left: 0px;
+.carousel__container:hover .carousel-item:hover {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
     opacity: 1;
 }
 
-body .options .option:not(.active) {
-    flex-grow: 1;
-    border-radius: 30px;
+.carousel-item__img {
+    width: 200px;
+    height: 250px;
+    -o-object-fit: cover;
+    object-fit: cover;
 }
 
-body .options .option:not(.active) .shadow {
-    bottom: -40px;
-    box-shadow: inset 0 -120px 0px -120px black, inset 0 -120px 0px -100px black;
-}
-
-body .options .option:not(.active) .label {
-    bottom: 10px;
-    left: 10px;
-}
-
-body .options .option:not(.active) .label .info>div {
-    left: 20px;
+.carousel-item__details {
+    background: -webkit-gradient(linear,
+            left bottom,
+            left top,
+            from(rgba(0, 0, 0, 0.9)),
+            to(rgba(0, 0, 0, 0)));
+    background: linear-gradient(to top,
+            rgba(0, 0, 0, 0.9) 0%,
+            rgba(0, 0, 0, 0) 100%);
+    font-size: 10px;
     opacity: 0;
-}
-
-body .options .option .shadow {
+    -webkit-transition: 450ms opacity;
+    transition: 450ms opacity;
+    padding: 10px;
     position: absolute;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    height: 120px;
-    transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-body .options .option .label {
-    display: flex;
-    position: absolute;
-    right: 0px;
-    height: 40px;
-    transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
+.carousel-item__details:hover {
+    opacity: 1;
 }
 
-body .options .option .label .icon {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    min-width: 40px;
-    max-width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    background-color: white;
+.carousel-item__details span {
+    /* width: 10px;
+    height: 10px; */
+    font-size: 0.9rem;
+    color: #2ecc71;
+    /* background-color: white; */
 }
 
-body .options .option .label .info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
-    color: white;
-    white-space: pre;
+.carousel-item__details .controls {
+    padding-top: 180px;
 }
 
-body .options .option .label .info>div {
-    position: relative;
-    transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95), opacity 0.5s ease-out;
-}
-
-body .options .option .label .info .main {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-body .options .option .label .info .sub {
-    transition-delay: 0.1s;
+.carousel-item__details .carousel-item__details--title,
+.carousel-item__details--subtitle {
+    color: #fff;
+    margin: 5px 0;
 }
