--- a/Home.css
+++ b/Home.css
@@ -77,242 +77,117 @@ nav a:hover span {
     color: #BC0E0E;
     font-weight: 700;
 }
-.Allalbum{
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.songlist1 {
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.carousel {
+    width: 100%;
+    height: 10%;
+    overflow-x: scroll;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.song-img1 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
+.carousel__container {
+    white-space: nowrap;
+    margin: 50px 0px;
+    padding-bottom: 10px;
+    display: inline-block;
+}
+
+.categories__title {
+    color: rgb(77, 55, 102);
+    font-size: 28px;
+    position: absolute;
+    padding-left: 30px;
+}
+
+.carousel-item {
+    width: 200px;
+    height: 250px;
     border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
+    background-color: #95bcd6;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-top: 70px;
+    display: inline-block;
     cursor: pointer;
-}
-
-.song-img1:hover {
-    border-color: #ffffff;
-}
-
-.song-img1 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
+    -webkit-transition: 1000ms all;
+    transition: 1000ms all;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
     position: relative;
 }
 
-.song-img1 h3 {
+.carousel-item:hover~.carousel-item {
+    -webkit-transform: translate3d(100px, 0, 0);
+    transform: translate3d(100px, 0, 0);
+}
+
+.carousel__container:hover .carousel-item {
+    opacity: 0.3;
+}
+
+.carousel__container:hover .carousel-item:hover {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.carousel-item__img {
+    width: 200px;
+    height: 250px;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.carousel-item__details {
+    background: -webkit-gradient(linear,
+            left bottom,
+            left top,
+            from(rgba(0, 0, 0, 0.9)),
+            to(rgba(0, 0, 0, 0)));
+    background: linear-gradient(to top,
+            rgba(0, 0, 0, 0.9) 0%,
+            rgba(0, 0, 0, 0) 100%);
+    font-size: 10px;
+    opacity: 0;
+    -webkit-transition: 450ms opacity;
+    transition: 450ms opacity;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.carousel-item__details:hover {
+    opacity: 1;
+}
+
+.carousel-item__details span {
+    /* width: 10px;
+    height: 10px; */
+    font-size: 0.9rem;
+    color: #BC0E0E;
+    /* background-color: white; */
+}
+
+.carousel-item__details .controls {
+    padding-top: 180px;
+}
+
+.carousel-item__details .carousel-item__details--title,
+.carousel-item__details--subtitle {
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
+    color: #fff;
+    margin: 5px 0;
 }
-
-.song-img2 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
-    border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
-    cursor: pointer;
-}
-
-.song-img2:hover {
-    border-color: #ffffff;
-}
-
-.song-img2 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
-    position: relative;
-}
-
-.song-img2 h3 {
+.carousel__container h2 {
+    color: rgb(132, 58, 218);
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
+    font-size: 28px;
+    position: absolute;
 }
-
-.song-img3 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
-    border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
-    cursor: pointer;
-}
-
-.song-img3:hover {
-    border-color: #ffffff;
-}
-
-.song-img3 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
-    position: relative;
-}
-
-.song-img3 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
-}
-
-.song-img4 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
-    border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
-    cursor: pointer;
-}
-
-.song-img4:hover {
-    border-color: #ffffff;
-}
-
-.song-img4 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
-    position: relative;
-}
-
-.song-img4 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
-}
-
-.songlist2 {
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.song-img5 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
-    border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
-    cursor: pointer;
-}
-
-.song-img5:hover {
-    border-color: #ffffff;
-}
-
-.song-img5 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
-    position: relative;
-}
-
-.song-img5 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
-}
-
-.song-img6 {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    align-items: center;
-    background-color: #444343;
-    border-radius: 20px;
-    justify-content: center;
-    margin-top: 10px;
-    padding-inline: 10px;
-    border: 2px solid rgba(56, 56, 56, 0.76);
-    transition: 0.2s ease-in;
-    cursor: pointer;
-}
-
-.song-img6:hover {
-    border-color: #ffffff;
-}
-
-.song-img6 img {
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 20px;
-    position: relative;
-}
-
-.song-img6 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: 700;
-    position: relative;
-}
-
 .bottom {
     overflow: hidden;
     position: sticky;
@@ -419,7 +294,7 @@ nav a:hover span {
     border-right: .04em solid rgba(158, 158, 158, 0);
     font-weight: 600;
     white-space: nowrap;
-    margin-left: 30px;
+    margin-right: 50px;
     animation:
         typing 2.5s steps(40, end),
         blink-caret .75s step-end 6;
