--- a/search.css
+++ b/search.css
@@ -106,7 +106,6 @@ nav a:hover span {
 }
 
 .searchbar {
-    margin-left: 100px;
     position: relative;
 }
 
@@ -224,114 +223,154 @@ nav a:hover span {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
 }
-.carousel {
-    width: 100%;
-    height: 10%;
-    overflow-x: scroll;
-    position: relative;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+
+.ag-format-container {
+    margin: 0 auto;
 }
 
-.carousel__container {
-    white-space: nowrap;
-    margin: 50px 0px;
-    padding-bottom: 10px;
-    display: inline-block;
+
+body {
+    background-color: #000;
 }
 
-.categories__title {
-    color: rgb(77, 55, 102);
-    font-size: 28px;
-    position: absolute;
-    padding-left: 30px;
+.ag-courses_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 50px 0;
 }
 
-.carousel-item {
-    width: 200px;
-    height: 250px;
-    border-radius: 20px;
-    background-color: #95bcd6;
+.ag-courses_item {
+    -ms-flex-preferred-size: calc(33.33333% - 30px);
+    flex-basis: calc(33.33333% - 30px);
+    margin: 0 15px 30px;
     overflow: hidden;
-    margin-right: 10px;
-    margin-top: 70px;
-    display: inline-block;
-    cursor: pointer;
-    -webkit-transition: 1000ms all;
-    transition: 1000ms all;
-    -webkit-transform-origin: center left;
-    transform-origin: center left;
+    border-radius: 28px;
+    height: 100%;
+    width: 100%;
+}
+
+.ag-courses-item_link {
+    display: block;
+    padding: 30px 20px;
+    background-color: #121212;
+    overflow: hidden;
     position: relative;
 }
 
-.carousel-item:hover~.carousel-item {
-    -webkit-transform: translate3d(100px, 0, 0);
-    transform: translate3d(100px, 0, 0);
+.ag-courses-item_link:hover,
+.ag-courses-item_link:hover .ag-courses-item_date {
+    text-decoration: none;
+    color: #FFF;
 }
 
-.carousel__container:hover .carousel-item {
-    opacity: 0.3;
+.ag-courses-item_link:hover .ag-courses-item_bg {
+    -webkit-transform: scale(10);
+    -ms-transform: scale(10);
+    transform: scale(10);
 }
 
-.carousel__container:hover .carousel-item:hover {
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
-    opacity: 1;
+.ag-courses-item_title {
+    min-height: 87px;
+    margin: 0 0 25px;
+    overflow: hidden;
+    font-weight: bold;
+    font-size: 30px;
+    color: #FFF;
+    z-index: 2;
+    position: relative;
 }
 
-.carousel-item__img {
-    width: 200px;
-    height: 250px;
-    -o-object-fit: cover;
-    object-fit: cover;
+.ag-courses-item_date-box {
+    font-size: 18px;
+    color: #FFF;
+    z-index: 2;
+    position: relative;
 }
 
-.carousel-item__details {
-    background: -webkit-gradient(linear,
-            left bottom,
-            left top,
-            from(rgba(0, 0, 0, 0.9)),
-            to(rgba(0, 0, 0, 0)));
-    background: linear-gradient(to top,
-            rgba(0, 0, 0, 0.9) 0%,
-            rgba(0, 0, 0, 0) 100%);
-    font-size: 10px;
-    opacity: 0;
-    -webkit-transition: 450ms opacity;
-    transition: 450ms opacity;
-    padding: 10px;
+.ag-courses-item_date {
+    font-weight: bold;
+    color: #f9b234;
+    -webkit-transition: color .5s ease;
+    -o-transition: color .5s ease;
+    transition: color .5s ease
+}
+
+.ag-courses-item_bg {
+    height: 128px;
+    width: 128px;
+    background-color: #f9b234;
+    z-index: 1;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: -75px;
+    right: -75px;
+    border-radius: 50%;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
 }
 
-.carousel-item__details:hover {
-    opacity: 1;
+.ag-courses_item:nth-child(2n) .ag-courses-item_bg {
+    background-color: #3ecd5e;
 }
 
-.carousel-item__details span {
-    /* width: 10px;
-    height: 10px; */
-    font-size: 0.9rem;
-    color: #BC0E0E;
-    /* background-color: white; */
+.ag-courses_item:nth-child(3n) .ag-courses-item_bg {
+    background-color: #e44002;
 }
 
-.carousel-item__details .controls {
-    padding-top: 180px;
+.ag-courses_item:nth-child(4n) .ag-courses-item_bg {
+    background-color: #952aff;
 }
 
-.carousel-item__details .carousel-item__details--title,
-.carousel-item__details--subtitle {
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin: 5px 0;
+.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
+    background-color: #cd3e94;
 }
-.carousel__container h2 {
-    color: rgb(132, 58, 218);
-    font-family: 'Poppins', sans-serif;
-    font-size: 28px;
-    position: absolute;
+
+.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
+    background-color: #4c49ea;
+}
+
+@media only screen and (max-width: 979px) {
+    .ag-courses_item {
+        -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    }
+
+    .ag-courses-item_title {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .ag-format-container {
+        width: 96%;
+    }
+
+}
+
+@media only screen and (max-width: 639px) {
+    .ag-courses_item {
+        -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    }
+
+    .ag-courses-item_title {
+        min-height: 72px;
+        line-height: 1;
+
+        font-size: 24px;
+    }
+
+    .ag-courses-item_link {
+        padding: 22px 40px;
+    }
+
+    .ag-courses-item_date-box {
+        font-size: 16px;
+    }
 }
